wiremock/filters.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: Sidecar
# metadata:
#   name: no-ip-tables
#   namespace: prod-us1
# spec:
#   workloadSelector:
#     labels:
#       app: productpage
#   ingress:
#   - port:
#       number: 9080 # binds to proxy_instance_ip:9080 (0.0.0.0:9080, if no unicast IP is available for the instance)
#       protocol: HTTP
#       name: somename
#     defaultEndpoint: 127.0.0.1:8080
#     captureMode: NONE # not needed if metadata is set for entire proxy
#   egress:
#   - port:
#       number: 3306
#       protocol: MYSQL
#       name: egressmysql
#     captureMode: NONE # not needed if metadata is set for entire proxy
#     bind: 127.0.0.1
#     hosts:
#     - "*/mysql.foo.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: reviews-lua
  namespace: load
spec:
  workloadSelector:
    labels:
      app: reviews
      version: v1
  configPatches:
    # The first patch adds the lua filter to the listener/http connection manager
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        portNumber: 9080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value: 
        name: direct-response
        match:
          prefix: /reviews
        directResponse:
          body:
            inlineString: '{"id": "0","podname": "reviews-v1-68b4dcbdb9-xwfsh","clustername": "null","reviews": [{  "reviewer": "Reviewer1",  "text": "Mock An extremely entertaining play by Shakespeare. The slapstick humour is refreshing!"},{  "reviewer": "Reviewer2",  "text": "Mock Absolutely fun and entertaining. The play lacks thematic depth when compared to other plays by Shakespeare."}]}'
          status: 200
      # lua filter specification
      #  name: envoy.lua
      #  typed_config:
      #     "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
      #     inlineCode: |
      #       function envoy_on_request(request_handle)
      #         -- Make an HTTP call to an upstream host with the following headers, body, and timeout.
      #         local headers, body = request_handle:httpCall(
      #          "lua_cluster",
      #          {
      #           [":method"] = "POST",
      #           [":path"] = "/acl",
      #           [":authority"] = "internal.org.net"
      #          },
      #         "authorize call",
      #         5000)
      #       end
